--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -31,7 +31,7 @@
 
     #other
       - video_series = client_settings.video_series
-      = link_to( t("videos.all", video_series.blank? ? videos_path : series_video_path(video_series) , class: "action_button_green")
+      = link_to( t("videos.all"), video_series.blank? ? videos_path : series_video_path(video_series) , class: "action_button_green")
       = render partial: "videos/publisher_banner", locals: {publisher: publisher}
 
 
