/app doesn't redirect to /mobile anymore, plus refactorings.

--- a/app/assets/stylesheets/donate.sass
+++ b/app/assets/stylesheets/donate.sass
@@ -24,7 +24,7 @@
     repeat: no-repeat
   overflow: hidden
   padding-bottom: 0
-  height: 600px
+  min-height: 600px
   position: relative
 
   .donate_copy
