--- a/app/views/search/_plans_list_item.html.haml
+++ b/app/views/search/_plans_list_item.html.haml
@@ -1,8 +1,8 @@
 - item = plans_list_item
 %li.plan
   %h3
-    = link_to YouVersion::Resource.i18nize(item.name), plan_path("#{item.id}-#{item.slug}")
+    = link_to YV::Resource.i18nize(item.name), plan_path("#{item.id}-#{item.slug}")
   %span.length
-    = YouVersion::Resource.i18nize(item.formatted_length)
+    = YV::Resource.i18nize(item.formatted_length)
   %p
-    = YouVersion::Resource.i18nize(item.about)
+    = YV::Resource.i18nize(item.about)
