--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -1,4 +1,4 @@
-= cache "#{@site}_footer_#{current_locale}", expires_in: a_long_time do
+= cache "#{@site}_footer_#{current_locale}", expires_in: YV::Caching.a_long_time do
   %footer#footer{role: "contentinfo", class: footer_classes}
     %p.links
       = link_to( t("now"),  external_url(:now))
