--- a/app/assets/stylesheets/_users.sass
+++ b/app/assets/stylesheets/_users.sass
@@ -10,3 +10,168 @@
   form li
     input.field
       width: 100%
+
+
+// !Profile and friend pages ----------------------------------------
+
+// !Top part with bio and pic
+
+.top_section
+  background: none
+  background-image: none
+  border: 0
+  +box-shadow(none)
+
+.profile-hdr
+  padding: 45px 0 0 45px
+  position: relative
+
+  .avatar_huge
+    position: absolute
+    top: 10px
+    right: 60px
+    width: 128px
+    height: 128px
+    +border-radius(128px)
+    +box-shadow(rgba(0,0,0,.15) 0 1px 1px)
+
+  .profile-hdr-name
+    font-size: 48px
+    text-shadow: none
+
+  .profile-hdr-btn
+    float: left
+    +border-radius(4px)
+    padding: 4px 20px
+
+  .profile-hdr-info
+    overflow: hidden
+    display: block
+    margin-bottom: 10px
+
+  .profile-hdr-info-user,
+  .profile-hdr-info-location,
+  .profile-hdr-info-link
+    display: inline-block
+    width: 22%
+    font-size: 15px
+    text-shadow: none
+    background:
+      repeat: no-repeat
+      position: left center
+    padding: 0 0 0 24px
+
+  .profile-hdr-info-about
+    font-size: 13px
+    width: 550px
+
+  .profile-hdr-info-user
+    background:
+      image: image-url("icon_small_user.png")
+
+  .profile-hdr-info-location
+    background:
+      image: image-url("icon_small_location.png")
+
+  .profile-hdr-info-link
+    background:
+      image: image-url("icon_small_link.png")
+
+
+// !Tab navigation
+
+.profile-tabs
+  overflow: hidden
+  margin: 0 0 15px 0
+
+.profile-tabs-activity,
+.profile-tabs-friends,
+.profile-tabs-notes,
+.profile-tabs-bookmarks,
+.profile-tabs-badges
+  display: block
+  width: 181px
+  margin-left: 1px
+  background-color: #fff
+  text-align: center
+  float: left
+
+.profile-tabs-activity
+  margin-left: 0
+
+.profile-tabs-activity
+  +border-radius(4px 0 0 4px)
+
+.profile-tabs-badges
+  +border-radius(0 4px 4px 0)
+
+.profile-tabs-activity a,
+.profile-tabs-friends a,
+.profile-tabs-notes a,
+.profile-tabs-bookmarks a,
+.profile-tabs-badges a
+  height: 40px
+  line-height: 39px
+  display: block
+  color: #999
+  text-decoration: none
+  font-weight: bold
+
+.profile-tabs
+  .highlighted a
+    color: #59B200
+
+
+// !Content area with feed etc.
+
+#main .profile
+  border: 0
+  background: none
+  padding: 0
+
+.moment-bm-title
+  width: 380px
+  letter-spacing: -0.04em
+  font-size: 26px
+  margin-bottom: 10px
+
+.moment-bm-references
+  margin-bottom: 0
+
+  li
+    padding: 0
+    margin-top: 15px
+
+  li:first-child
+    margin-top: 0
+
+.moment-bm-references-h4title
+  margin-bottom: 15px
+
+.moment-bm-references-h3title
+  font-size: 18px
+  margin-bottom: 15px
+
+.moment-bm-references-reader.moment-vod-verse
+  font-size: 20px
+  margin-bottom: 0
+
+  .label
+    font-size: 13px
+
+.moment-bm-labels
+  margin: 10px 0 0
+
+.moment-bm-labels-link
+  display: inline-block
+  padding: 0px 7px 2px
+  background-color: #bbb
+  +border-radius(4px)
+  margin-left: 2px
+  color: #fff
+  text-decoration: none
+  font-weight: bold
+
+.moment-bm-labels-link:hover
+  background-color: #aaa
+  color: #fff
