--- a/app/views/layouts/users.html.haml
+++ b/app/views/layouts/users.html.haml
@@ -1,10 +1,7 @@
 - @title = @user.name || @user.username if @user
 
-- unless content_for?(:sidebar)
-  - content_for :sidebar do
-    - if @me
-      = render partial: "widgets/settings" unless [:recent_activity, :bookmarks, :notes].find{|rsrc| rsrc == @selected}
-    = render partial: "widgets/badges" unless @user.badges.blank?
+- @sidebar = false
+
 
 - if @me
   - content_for :mobile_right_nav do
@@ -12,28 +9,29 @@
 
 - content_for :main do
 
-  - unless @me
+  %section.top_section
+    .profile-hdr
+      %img.avatar_huge{src: @user.user_avatar_url["px_128x128"]}
 
-    %section.top_section.clearfix
-      .profile_header
-        - if @user.user_avatar_url
-          %img.avatar_huge{src: @user.user_avatar_url["px_128x128"]}
+      - if @me
+        %form{action: edit_user_path(@user)}
+          %button.profile-hdr-btn= t("users.profile.edit")
+      %h1.profile-hdr-name= @user.name || @user.username
 
-        - if @me
-          %form{action: edit_user_path(@user)}
-            %button.float_right= t("users.profile.edit")
-        %h1= @user.name || @user.username
+      %ul.profile-hdr-info
+        - if @user.name
+          %li.profile-hdr-info-user
+            = @user.username
+        - if @user.location
+          %li.profile-hdr-info-location
+            = @user.location
+        - if @user.website
+          %li.profile-hdr-info-link
+            = link_to @user.website_human, @user.website_url
 
-      .profile_info
-        %ul.float_left
-          - if @user.name
-            %li.icon_small_user= @user.username
-          - if @user.location
-            %li.icon_small_location= @user.location
-          - if @user.website
-            %li.icon_small_link= link_to @user.website_human, @user.website_url
-          - if @user.bio
-            %li.icon_small_about= @user.bio
+      - if @user.bio
+        %p.profile-hdr-info-about
+          = @user.bio
 
     %ul.header_tabs
       %li.notes{class: ("highlighted" if @selected == :notes)}
@@ -52,7 +50,8 @@
         %h1{class: @selected == :notes ? "float_left" : ""}= t("users.my #{@selected.to_s}")
       - else
         - title = t("users.edit #{@selected}")
-        %h1= title
+        %h1
+          = title
         .mobile
           %dl.tabs
             %dd{class: ('highlighted' if @selected == :profile)}
