--- a/app/views/pages/feed.html.haml
+++ b/app/views/pages/feed.html.haml
@@ -4,12 +4,12 @@
   %h1 Feed
   %p= link_to("Detail", "/pages/detail")
 
-  -# Individual moments
+  -# !!Individual moments
 
-  -# Moment container
+  -# !Moment container
 
   .moment
-    -# the content of the moment
+    -# !the content of the moment
     .moment-top
       .moment-bm
         = image_tag "social-cap-bm.png", class: "moment-img"
@@ -18,7 +18,7 @@
         %p.moment-bm-text
           <a href="#">Peter Badonkadonkavich</a> bookmarked <a href="#">Ephesians 4:13 NKJV</a>
 
-    -# share controls, dates, and comments
+    -# !share controls, dates, and comments
     .moment-btm
       .moment-actions
         %span.moment-actions-share
@@ -61,31 +61,31 @@
           %textarea.moment-comments-input-text
             Leave a comment...
 
-  -# Verse of the day moment
+  -# !Verse of the day moment
 
   .moment
-    -# the content of the moment
+    -# !the content of the moment
     .moment-top
       .moment-vod
-        -# corner cap image
+        -# !corner cap image
         = image_tag "social-cap-vod.png", class: "moment-img"
-        -# Icon and title
+        -# !Icon and title
         %h4.moment-vod-title
           Verse of the day
-        -# verse text
+        -# !verse text
         %p.moment-vod-verse
           “I am the vine; you are the branches. If you remain in me and I in you, you will bear much fruit; apart from me you can do nothing.
-        -# verse link text
+        -# !verse link text
         <a href="#" title="Go to this verse in the reader" class="moment-vod-links">John 1:5</a>
-        -# verse versions list
+        -# !verse versions list
         %ul.moment-vod-list
-          -# verse version
+          -# !verse version
           %li
             NIV
           %li.moment-vod-list-on
             NKJVAS
 
-  -# Bookmark moment
+  -# !Bookmark moment
 
   .moment
     .moment-top
@@ -96,7 +96,7 @@
         %p.moment-bm-text
           <a href="#" title="Visit this user's profile page">Peter Badonkadonkavich</a> bookmarked <a href="#" title="Go to this verse in the reader">Ephesians 4:13 NKJV</a>
 
-  -# Reading plan moment
+  -# !Reading plan moment
 
   .moment
     .moment-top
@@ -107,7 +107,7 @@
         %p.moment-rp-text
           <a href="#" title="Visit this user's profile page">Name</a> started a new reading plan: <a href="#" title="View this reading plan">Reading plan</a>
 
-  -# Group moment
+  -# !Group moment
 
   .moment
     .moment-top
@@ -118,7 +118,7 @@
         %p.moment-grp-text
           <a href="#" title="Visit this user's profile page">Name</a> joined a new group: <a href="#" title="View this group">group</a>
 
-  -# Download moment
+  -# !Download moment
 
   .moment
     .moment-top
@@ -129,7 +129,7 @@
         %p.moment-dl-text
           <a href="#" title="Visit this user's profile page">Name</a> downloaded a new version: <a href="#" title="Learn more about this version">version</a>
 
-  -# Note moment
+  -# !Note moment
 
   .moment
     .moment-top
@@ -145,7 +145,7 @@
           %p.moment-no-note-text
             Knight Rider, a shadowy flight into the dangerous world of a man who does not exist. Michael Knight, a young loner on a crusade to champion...
 
-  -# Badge moment
+  -# !Badge moment
 
   .moment
     .moment-top
@@ -160,7 +160,7 @@
           %p.moment-bdg-info-text
             Completed 3 reading plans
 
-  -# Video moment
+  -# !Video moment
 
   .moment
     .moment-top
