--- a/app/views/users/bookmarks.html.haml
+++ b/app/views/users/bookmarks.html.haml
@@ -1,6 +1,10 @@
 - content_for :user_main do
-  - if @bookmarks.blank?
-    %p= t('bookmarks.other user not found', username: @user.username)
-  %ul.resource_list
+  - if @bookmarks.empty?
+    -# User has no bookmarks
+    %p.profile-bookmarks-none
+      = t('bookmarks.other user not found', username: @user.username)
+
+  -# User has bookmarks
+  .profile-bookmarks-list
     = render partial: 'bookmarks/list_item', collection: @bookmarks, locals: {display: :icon}
   = render partial: 'shared/pagination', locals: {resource_list: @bookmarks}
