Updated profile header, and the notes, badges, and bookmarks tabs within a users profile.

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -232,7 +232,7 @@
   margin-bottom: 0
 
 .moment-vod-verse
-  font: italic 24px "times new roman", times, serif
+  font: 24px "times new roman", times, serif
   letter-spacing: -.05em
   margin: 10px 0 15px
   background-color: #EEEDEB
