--- a/app/assets/stylesheets/_users.sass
+++ b/app/assets/stylesheets/_users.sass
@@ -53,17 +53,18 @@
   .profile-hdr-info-location,
   .profile-hdr-info-link
     display: inline-block
-    width: 22%
+    width: auto
     font-size: 15px
     text-shadow: none
     background:
       repeat: no-repeat
       position: left center
-    padding: 0 0 0 24px
+    padding: 0 20px 0 22px
 
   .profile-hdr-info-about
     font-size: 13px
     width: 550px
+    margin-bottom: 40px
 
   .profile-hdr-info-user
     background:
@@ -76,6 +77,11 @@
   .profile-hdr-info-link
     background:
       image: image-url("icon_small_link.png")
+
+  .profile-hdr-btn
+    position: absolute
+    top: 15px
+    left: 45px
 
 
 // !Tab navigation
