--- a/app/assets/stylesheets/_header.sass
+++ b/app/assets/stylesheets/_header.sass
@@ -62,8 +62,7 @@
   background-position: 0px -55px
   margin-left: 10px
 
-
-#header 
+#header
   .header-popover
     position: absolute
     top: 48px
@@ -181,7 +180,7 @@
         margin-bottom: 0px
         line-height: 28px
         border-bottom: 1px solid #f1f1f1
-        
+
 
 
 // `Header > Search
@@ -192,7 +191,7 @@
   height: 50px
   position: absolute
   top: 0
-  right: 328px
+  right: 128px
 
 #header_search_input,
 #header_search_button
@@ -244,7 +243,6 @@
 //----------------------------------------------------------------------------------------------------
 
 #header nav
-  background: image-url("header_nav.png") no-repeat
   float: right
   height: 50px
   width: 290px
@@ -265,6 +263,7 @@
   margin-top: 9px
   padding-top: 1px
   height: 31px
+  width: 120px
 
 #header nav ul > li:first-child
   margin-left: 20px
@@ -280,12 +279,6 @@
   margin-top: -9px
   top: 50%
   left: -12px
-
-#header nav ul > li:hover,
-#header nav ul > .li_active
-  +background-image(linear-gradient(#666, #000 1px, #000))
-  +box-shadow(#000 0 -1px 0 0)
-  background-color: #000
 
 #header nav ul > .li_active
   +border-bottom-radius(0)
@@ -304,10 +297,8 @@
   padding: 10px
 
 #header_profile_trigger img
-  +border-radius(2px)
-  border: 1px solid
-    color: #000 #222 #444
-  margin: -4px 5px 0 -5px
+  +border-radius(25px)
+  margin: -4px 5px 0 50px
   width: 25px
   height: 25px
 
