Flattened primary buttons and reading plan pages

--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -9,11 +9,10 @@
 #main article
   @extend .clearfix
   +round
-  +box-shadow(#fff 0 1px 0 0)
   background:
     color: #fff
     repeat: repeat-x
-  border: 1px solid #cbc9cf
+  border: 0
   padding: 30px 30px 15px
   position: relative
   min-height: 368px
