--- a/app/assets/stylesheets/_sidebar.sass
+++ b/app/assets/stylesheets/_sidebar.sass
@@ -19,10 +19,10 @@
   +border-radius(4px)
   font-size: 17px
   margin-top: 1px
-  border: 1px solid #91B164
+  border: 0
 
 #sidebar .action_button_blue
-  border: 1px solid #0077b4
+  border: 0
 
 #sidebar .action_button_blue:active,
 #sidebar .action_button_green:active,
