--- a/app/assets/stylesheets/_split_pane.sass
+++ b/app/assets/stylesheets/_split_pane.sass
@@ -18,7 +18,6 @@
       margin-left: 40px
 
   div.sidebar
-    background: image-url("split_pane_sidebar.png") no-repeat top right
     min-height: 533px
     width: 30%
 
@@ -53,7 +52,7 @@
         color: rgba(#000, 0.05)
 
     .highlighted
-      background: #fff image-url("split_pane_sidebar_highlighted.png") no-repeat
+      background: #fff
       font-weight: bold
       margin-right: -1px
       position: relative
