--- a/app/assets/stylesheets/_tabs.sass
+++ b/app/assets/stylesheets/_tabs.sass
@@ -161,10 +161,9 @@
 #main article .combo_button li,
 #main article .combo_button dd
   background-color: #E5E5E5
-  border: 1px solid #aeaeae
   margin-left: -1px
   text-shadow: #fff 0 1px 0
-  +box-shadow(inset rgba(255,255,255, 0.8) 0 2px 0 0, inset rgba(0,0,0, 0.10) 0 -2px 0 0)
+  +box-shadow(inset rgba(0,0,0, 0.20) 0 -1px 0 0)
 
 #main article .combo_button li:first-child,
 #main article .combo_button dt:first-child + dd
@@ -216,7 +215,7 @@
     +box-shadow(none)
 
     a
-      +box-shadow(inset rgba(#000, 0.6) 0 2px 3px 0)
+      +box-shadow(inset rgba(#000, 0.6) 0 1px 0 0)
       border: 0
       padding:
         top: 1px
