--- a/app/assets/stylesheets/_form_elements.sass
+++ b/app/assets/stylesheets/_form_elements.sass
@@ -213,11 +213,11 @@ button,
 input[type="button"],
 input[type="submit"],
 input[type="reset"]
-  border: 1px solid #aeaeae
-  color: #0084c8
+  border: 0
+  color: #444
   background-color: #E5E5E5
   padding: 8px 15px
-  +box-shadow(#ddd 0 1px 3px 0, inset rgba(255,255,255, 0.8) 0 2px 0 0, inset rgba(0,0,0, 0.10) 0 -2px 0 0)
+  +box-shadow(inset rgba(0,0,0, 0.10) 0 -1px 0 0)
   font-size: 13px
 
 button:hover,
@@ -233,9 +233,7 @@ input[type="button"]:active,
 input[type="submit"]:active,
 input[type="reset"]:active,
 button.hover
-  +background-image(linear-gradient(#fff, #e0e0e0 1px, #bebebe))
   background-color: #bebebe
-  border-color: #838383
 
 button:focus,
 input[type="button"]:focus,
@@ -394,9 +392,8 @@ button.action_button_grey,
     weight: bold
   line-height: 1.3
   text-align: center
-  text-shadow: rgba(#000, 0.5) 0 -1px 0
   padding: 7px 20px
-  +box-shadow(#ccc 0 1px 3px 0, inset rgba(255,255,255, 0.3) 0 2px 0 0, inset rgba(0,0,0, 0.15) 0 -2px 0 0)
+  +box-shadow(inset rgba(0,0,0, 0.15) 0 -1px 0 0)
   background-image: none
 
 
@@ -443,7 +440,7 @@ input[type="submit"].action_button_green,
 .action_button_green:hover,
 .action_button_green:focus,
 .action_button_green:active
-  border: 1px solid #91B164
+  border: 0
 
 
 //Blue Action Buttons
@@ -453,7 +450,7 @@ input[type="button"].action_button_blue,
 .action_button_blue,
 a.action_button_blue
   background-color: #0099CC
-  border: 1px solid #0077b4
+  border: 0
 
 input[type="submit"].action_button_blue:hover,
 input[type="submit"].action_button_blue:focus,
@@ -484,7 +481,7 @@ a.action_button_red,
 .action_button_red
   background-color: #CC0000
   background-image: none
-  border: 1px solid #B20000
+  border: 0
 
 .action_button_red:hover,
 .action_button_red:focus,
@@ -501,13 +498,6 @@ input[type="submit"].action_button_red:active,
 .action_button_red:active
   color: #ae8787
 
-input[type="submit"].action_button_red,
-.action_button_red,
-.action_button_red:hover,
-.action_button_red:focus,
-.action_button_red:active
-  border-color: #ab2929
-
 
 // Grey Action Buttons
 
@@ -517,7 +507,6 @@ button.action_button_grey,
   background-color: #e6e6e6
   background-image: none
   color: #424242 !important
-  text-shadow: rgba(255, 255, 255, 0.5) 0 -1px 0
 
 .action_button_grey:hover,
 .action_button_grey:focus,
@@ -538,7 +527,7 @@ input[type="submit"].action_button_grey,
 .action_button_grey:hover,
 .action_button_grey:focus,
 .action_button_grey:active
-  border: 1px solid #afafaf
+  border: 0
 
 
 // Small action buttons
