--- a/app/assets/stylesheets/_progress_bars.sass
+++ b/app/assets/stylesheets/_progress_bars.sass
@@ -33,8 +33,7 @@
   right: 0
 
 .progress_bar_outer
-  +background-image(linear-gradient(#fff, #ddd 95%, #ccc))
-  background-color: #ccc
+  background-color: #f9f9f9
   margin-right: 180px
   overflow: hidden
   position: relative
@@ -50,7 +49,6 @@
   +border-radius(14px)
 
 .progress_bar_shadow
-  +box-shadow(inset rgba(#000, 0.6) 0 1px 3px 0)
   position: absolute
   top: 6px
   left: 6px
