--- a/app/assets/stylesheets/_ui_elements.sass
+++ b/app/assets/stylesheets/_ui_elements.sass
@@ -391,20 +391,11 @@ dd .icon_settings
 .cal_month caption
   padding: 5px 0px
   font-weight: bold
-  background: #e53535 /* Old browsers */
-  background: -moz-linear-gradient(top,  #e53535 0%, #ae1b1b 100%) /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#e53535), color-stop(100%,#ae1b1b)) /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top,  #e53535 0%,#ae1b1b 100%) /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  #e53535 0%,#ae1b1b 100%) /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  #e53535 0%,#ae1b1b 100%) /* IE10+ */
-  background: linear-gradient(top,  #e53535 0%,#ae1b1b 100%) /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e53535', endColorstr='#ae1b1b',GradientType=0 ) /* IE6-9 */
+  background: #ae1b1b /* Old browsers */
   color: #fff
-  text-shadow: 0px 1px 0px #420b0b
-  border: 1px solid #9d2c2c
+  border: 0
   border-top-left-radius: 2px
   border-top-right-radius: 2px
-  box-shadow: 0px 1px 0px #f59595 inset
   text-align: center
 
 .cal_month thead
