--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -97,7 +97,7 @@ p
       text-decoration: none
       padding: 4px 14px 6px
       border-radius: 4px
-      box-shadow: inset 0px 2px 0px rgba(255, 255, 255, 0.3), inset 0px -2px 0px rgba(0, 0, 0, 0.3)
+      box-shadow: inset 0px -1px 0px rgba(0, 0, 0, 0.3)
 
     .cta:hover
       background: #3787d6
@@ -206,7 +206,7 @@ p
       text-decoration: none
       padding: 5px 20px
       border-radius: 4px
-      box-shadow: inset 0px 3px 0px rgba(255, 255, 255, 0.3), inset 0px -3px 0px rgba(0, 0, 0, 0.3)
+      box-shadow: inset 0px -1px 0px rgba(0, 0, 0, 0.3)
 
   .or
     width: 100px
@@ -229,7 +229,7 @@ p
       text-decoration: none
       padding: 5px 10px
       border-radius: 4px
-      box-shadow: inset 0px 3px 0px rgba(255, 255, 255, 0.3), inset 0px -3px 0px rgba(0, 0, 0, 0.3)
+      box-shadow: inset 0px -1px 0px rgba(0, 0, 0, 0.3)
 
 #main article .explore_cta.form
   width: 940px
@@ -264,7 +264,7 @@ p
       text-decoration: none
       padding: 7px 0 8px
       border-radius: 4px
-      box-shadow: inset 0px 3px 0px rgba(255, 255, 255, 0.4), inset 0px -3px 0px rgba(99, 122, 68, 1)
+      box-shadow: inset 0px -1px 0px rgba(99, 122, 68, 1)
       text-shadow: none
       border: 0
 
@@ -340,7 +340,7 @@ p
     text-decoration: none
     padding: 5px 15px
     border-radius: 5px
-    box-shadow: inset 0px 3px 0px rgba(#FFF, 0.3), inset 0 -3px 0 rgba(#000, 0.3)
+    box-shadow: inset 0 -1px 0 rgba(#000, 0.3)
     margin-top: 80px
 
   h2
@@ -540,7 +540,7 @@ p
             text-decoration: none
             padding: 7px 0 8px
             border-radius: 4px
-            box-shadow: inset 0px 3px 0px rgba(255, 255, 255, 0.4), inset 0px -3px 0px rgba(99, 122, 68, 1)
+            box-shadow: inset 0px -1px 0px rgba(99, 122, 68, 1)
             text-shadow: none
             border: 0
 
