--- a/app/assets/stylesheets/_videos.sass
+++ b/app/assets/stylesheets/_videos.sass
@@ -12,7 +12,7 @@
 
 =video_container
   list-style-type: none
-  background: #F4F3F1
+  background: #f1f1f1
 
 =video_container_info
   overflow: auto
@@ -92,7 +92,7 @@
           background-color: #0084c8
           +round_bottom
           +round_top
-          +box-shadow(inset rgba(0,0,0,0.18) 0 -2px 0, inset rgba(255,255,255,.3) 0 2px 0)
+          +box-shadow(inset rgba(0,0,0,0.18) 0 -1px 0, inset rgba(255,255,255,.3) 0 1px 0)
 
         a:hover
           background-color: #008DD5
@@ -165,14 +165,14 @@
     overflow: hidden
 
     li.video:hover
-      +box-shadow(rgba(0,0,0,0.3) 0 2px 8px)
+      background-color: #e1e1e1
 
     li.video
       float: left
       width: 400px
       padding: 5px
       margin: 0 30px 30px 0
-      border: 1px solid #ddd
+      border: 0
       +video_container
 
       img
