--- a/app/assets/stylesheets/_form_elements.sass
+++ b/app/assets/stylesheets/_form_elements.sass
@@ -281,7 +281,6 @@ input[type="url"],
 input[type="week"]
   +round
   +box-shadow(inset rgba(#000, 0.1) 0 1px 1px 0, #fff 0 1px 0 0, #eeedeb 0 0 0 5px)
-  +background-image(linear-gradient(#fff, #eee))
   padding: 7px 0 7px 10px
   height: 35px
 
@@ -304,12 +303,10 @@ textarea
   height: auto
 
 .alternate_select
-  +background(linear-gradient(#fefefe, #dbdbdb))
   height: 24px
   padding: 2px 10px
 .alternate_select_locked
   padding-left: 20px
-  +background(linear-gradient(#fefefe, #dbdbdb))
 
 @media (-webkit-min-device-pixel-ratio: 0)
   select
@@ -320,7 +317,7 @@ textarea
     padding-right: 41px
   // Alternate_select queues up the smaller select design used in things like parallel notes -jc
   .alternate_select
-    +background(image-url("select_wrap_span.png") no-repeat center right, linear-gradient(#fefefe, #dbdbdb))
+    +background(image-url("select_wrap_span.png") no-repeat center right)
     height: 24px
     padding: 2px 10px
   .alternate_select_locked
@@ -443,7 +440,7 @@ input[type="submit"].action_button_green,
   border: 0
 
 
-//Blue Action Buttons
+// Blue Action Buttons
 
 input[type="submit"].action_button_blue,
 input[type="button"].action_button_blue,
@@ -554,13 +551,11 @@ input[type="submit"].action_button_grey,
   text-decoration: none
 
 .sm_action_button_green
-  +background-image(linear-gradient(#81a950, #679037))
   background-color: #81a950
 
 .sm_action_button_green:hover,
 .sm_action_button_green:focus,
 .sm_action_button_green:active
-  +background-image(linear-gradient(#5d832f, #436916))
   background-color: #5d832f
 
 .sm_action_button_green:focus,
@@ -574,13 +569,11 @@ input[type="submit"].action_button_grey,
   border-color: #607346
 
 .sm_action_button_blue
-  +background-image(linear-gradient(#1a90cd, #0077b4))
   background-color: #0077b4
 
 .sm_action_button_blue:hover,
 .sm_action_button_blue:focus,
 .sm_action_button_blue:active
-  +background-image(linear-gradient(#1a7aab, #006091))
   background-color: #006091
 
 .sm_action_button_blue:focus,
@@ -622,7 +615,6 @@ input[type="submit"].action_button_grey,
 
 
 .small_action_button
-  +background-image(linear-gradient(#5d832f, #436916))
   +round
   font-weight: bold
   padding: 4px 10px
