Significant backend API library refactoring.

--- a/app/views/bookmarks/index.html.haml
+++ b/app/views/bookmarks/index.html.haml
@@ -6,7 +6,7 @@
 
 %article.bookmarks
   %h1= t('users.my bookmarks')
-  - unless @bookmarks.empty?
+  - unless @bookmarks.blank?
     .split_pane
       .sidebar
         %dl.labels_menu
