--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -15,7 +15,7 @@
 
     %p= t('about page.youversion copy 2')
 
-  - if @site.class == SiteConfigs::Bible
+  - if bdc_user?
     %h2= t('about page.bible dot com title')
     %p= t('about page.bible dot com copy').html_safe
 
