--- a/app/views/sidebars/users/_default.html.haml
+++ b/app/views/sidebars/users/_default.html.haml
@@ -5,4 +5,4 @@
 
 - if presenter.for_me?
   = render "widgets/settings" unless [:recent_activity, :bookmarks, :notes].find{|rsrc| rsrc == @selected}
-= render "widgets/badges" unless user.badges.empty?
+= render "widgets/badges" unless user.badges.blank?
