--- a/app/views/users/forgot_password.html.haml
+++ b/app/views/users/forgot_password.html.haml
@@ -4,6 +4,10 @@
 %article
   %h1.keep= t('users.forgot password')
   %p= t('users.forgot password copy')
+  
+  - if @results
+    = render partial: "shared/form_errors", locals: {errors: @results.errors}
+
   = form_tag forgot_password_path do
     %ul
       %li
