--- a/app/views/users/password.html.haml
+++ b/app/views/users/password.html.haml
@@ -1,6 +1,6 @@
 - @title = "#{t('users.change my password')} | #{@user.name || @user.username}"
 
-= form_for :user, url: update_password_user_path(@user), method: :put do |f|
+= form_for :user, url: update_password_user_path(current_user), method: :put do |f|
   = render partial: "shared/form_errors", locals: {errors: @user.errors, heading: t("users.edit password errors")}
   %p
     = f.label :old_password, t('users.profile.current password')
