--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -2,7 +2,7 @@
   = @me ? t('users.my profile') : t('users.other user profile', username: @user.name || @user.username)
 
 %ul.resource_list
-  - if @user.recent_activity.empty?
+  - if @user.recent_activity.blank?
     %p= t('no recent activity', username: @user.username)
   - else
     - @user.recent_activity.each do |a|
