--- a/app/views/plans/index.html.haml
+++ b/app/views/plans/index.html.haml
@@ -5,7 +5,7 @@
 
 %article#plan-index
   - if current_auth
-    %h1.float_left= t("plans.browse plans", category: @categories.current_name || t("plans.all"))
+    %h1.float_left= t("plans.browse plans", category: @categories.try(:current_name) || t("plans.all"))
     %dl.combo_button.float_right
       %dt
       %dd.highlighted
@@ -13,7 +13,7 @@
       %dd
         = link_to t("plans.my plans"), user_subscriptions_path(current_user)
   - else
-    %h1= t("plans.browse plans", category: @categories.current_name || t("plans.all"))
+    %h1= t("plans.browse plans", category: @categories.try(:current_name) || t("plans.all"))
 
   .split_pane
     .sidebar
@@ -26,7 +26,7 @@
             %input{type: "hidden", name: "translate", value: params[:translate]}
           - if @plan_lang
             %input{type: "hidden", name: "lang", value: @plan_lang}
-          %input.field.autofocus{name: "query", type: 'search', placeholder: t("plans.search placeholder", category: @categories.current_name || t("plans.all")), value: params[:query]}
+          %input.field.autofocus{name: "query", type: 'search', placeholder: t("plans.search placeholder", category: @categories.try(:current_name) || t("plans.all")), value: params[:query]}
           %input.submit{type: 'submit', value: t("plans.search"), onClick: "$('select.language').attr('disabled','true');"}
 
         %form{method: 'get'}
@@ -74,7 +74,7 @@
       - unless @plans.empty?
         %ul.resource_list
           = render partial: "plans/list_item", collection: @plans, locals: {original_locale: orig_locale}
-        = render "shared/pagination", resource_list: @plans
+        = render partial: "shared/pagination", locals: {resource_list: @plans}
       -else
         .none{align: "center"}= t("plans.none found")
 
