--- a/app/views/users/bookmarks.html.haml
+++ b/app/views/users/bookmarks.html.haml
@@ -1,5 +1,5 @@
 - content_for :user_main do
-  - if @bookmarks.empty?
+  - if @bookmarks.blank?
     %p= t('bookmarks.other user not found', username: @user.username)
   %ul.resource_list
     = render partial: 'bookmarks/list_item', collection: @bookmarks, locals: {display: :icon}
