Removed texture from RP progress bar.

--- a/app/assets/stylesheets/_progress_bars.sass
+++ b/app/assets/stylesheets/_progress_bars.sass
@@ -40,7 +40,7 @@
 
 .progress_bar
   +border-left-radius(14px)
-  background: #789d4a image-url("progress_bar.png") repeat-x top center
+  background: #789d4a
   border-right: 1px solid #808f6b
   visibility: hidden
 
