--- a/app/assets/stylesheets/_widgets.sass
+++ b/app/assets/stylesheets/_widgets.sass
@@ -61,8 +61,8 @@
   .hd
     font-size: 14px
     font-weight: bold
-    line-height: 24px
-    padding: 5px 15px
+    line-height: 18px
+    padding: 10px 15px
     position: relative
     border-bottom: 1px solid #DEDDDB
     background-color: #EEEDEB
@@ -134,7 +134,7 @@
       display: block
       padding: 8px 20px 8px 30px
       text-decoration: none
-      border-top: 1px solid #fff
+      border-top: 1px solid #DEDDDB
       background: image-url("main_article_ul_li_arrow.png") no-repeat 15px center
 
     a, a:hover
@@ -147,13 +147,13 @@
 
   .menu
     margin-bottom: 0 !important
-    background: image-url("shadow.png") repeat-x
+    background: #fff
 
     li
       padding: 0
 
     li.active
-      background: #ddd
+      background: #d1d1d1
       border-top: none
 
     a,
@@ -189,6 +189,7 @@
 
 .widget ul li:last-child
   border-bottom: 0
+  +border-radius(0 0 4px 4px)
 
 .widget table
   width: 100%
@@ -245,9 +246,7 @@
   +round_top
   +round_bottom
   +box-shadow(inset #fff 0 1px 0 0)
-  +background-image(linear-gradient(#eeedeb, #dddcda))
-  background-color: #dddcda
-  border: 1px solid #cbc9cf
+  background-color: #EEEDEB
   padding: 10px 15px
   margin-bottom: 10px
 
@@ -331,6 +330,8 @@
   p
     margin-bottom: 20px
 
+// !Reading plan widget --------------
+
 #widget-plan-controls
   .hd
     .settings
@@ -382,7 +383,7 @@
         padding: 0
         background:
           color: transparent
-          image: image-url("sprite-subscription-calendar.png")
+          image: image-url("nav_plans.png")
           position: -73px 0px
 
         span
@@ -394,7 +395,7 @@
       a:hover
         background:
           color: transparent
-          image: image-url("sprite-subscription-calendar.png")
+          image: image-url("nav_plans.png")
           position: -73px 1px
 
     div.day
