flattened more UI elements and styled widgets

--- a/app/assets/stylesheets/_form_elements.sass
+++ b/app/assets/stylesheets/_form_elements.sass
@@ -280,7 +280,7 @@ input[type="time"],
 input[type="url"],
 input[type="week"]
   +round
-  +box-shadow(inset rgba(#000, 0.1) 0 1px 1px 0, #fff 0 1px 0 0, #eeedeb 0 0 0 5px)
+  // +box-shadow(inset rgba(#000, 0.1) 0 1px 1px 0, #fff 0 1px 0 0, #eeedeb 0 0 0 5px)
   padding: 7px 0 7px 10px
   height: 35px
 
@@ -357,7 +357,8 @@ input[type="time"]:active,
 input[type="url"]:active,
 input[type="week"]:active
   border-color: $blue
-  +box-shadow(inset rgba(#000, 0.1) 0 1px 1px 0, #fff 0 1px 0 0, $blue_light 0 0 5px 0, #eeedeb 0 0 0 5px)
+  // +box-shadow(inset rgba(#000, 0.1) 0 1px 1px 0, #fff 0 1px 0 0, $blue_light 0 0 5px 0, #eeedeb 0 0 0 5px)
+  outline: 0 !important
 
 input[type="search"]
   padding-right: 1px
