--- a/app/assets/stylesheets/_widgets.sass
+++ b/app/assets/stylesheets/_widgets.sass
@@ -1,6 +1,5 @@
 // `Widgets
 //----------------------------------------------------------------------------------------------------
-
 .widget.simple
   .bd
     border: none
@@ -20,6 +19,9 @@
   border: 0
   background: #EEEDEB
   +round
+
+  a
+    text-decoration: none
 
   h3
     margin: 0
@@ -103,6 +105,7 @@
     padding: 20px
     font-weight: normal
     +border-radius(3px)
+    overflow: hidden
 
     p
       margin: 0
@@ -257,6 +260,19 @@
   p
     margin-bottom: 0
 
+#widget-signup,
+#widget-signin
+  background: #0084c8
+
+  h3
+    color: #024162
+    padding-top: 8px
+
+  .action_button_grey
+    float: right
+    margin-top: -23px
+    padding: 7px 10px
+
 #widget-user-settings
   .hd span
     display: block
@@ -312,13 +328,18 @@
   .bd
     background:
       image: image-url("ad_bible_app.png")
-      position: 90% 80%
+      position: 92% 80%
       repeat: no-repeat
 
     h3
       margin-bottom: 1.3em
     p
       margin-bottom: 10px
+
+    .action_button_green
+      padding: 7px 10px
+      font-size: 15px
+      float: left
 
 #widget-devotional
   h2
