--- a/app/views/widgets/_sign_up.html.haml
+++ b/app/views/widgets/_sign_up.html.haml
@@ -3,4 +3,4 @@
     %h3
       = t("no account")
       - redirect = params[:redirect] || (request.referer ? URI(request.referer).path : nil)
-      %em= link_to t("sign up"), sign_up_path(redirect: redirect, source: params[:source])
+    = link_to t("sign up"), sign_up_path(redirect: redirect, source: params[:source]), class: "action_button_grey"
