Added image to RP calendar so it's clearer that a day has been read

--- a/app/assets/stylesheets/_ui_elements.sass
+++ b/app/assets/stylesheets/_ui_elements.sass
@@ -420,7 +420,6 @@ dd .icon_settings
   font-size: 12px
   height: 35px
   width: 35px
-  box-shadow: 0px 1px 0px #fff inset
 
 .cal_month td a
   font-size: 12px
@@ -446,7 +445,7 @@ dd .icon_settings
 
 .cal_month td.read
   font-weight: bold
-  text-decoration: line-through
+  background: image-url("cal_check.png") no-repeat right top
 
 .cal_month td.read a
   color: #888
