--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -354,6 +354,37 @@
   margin-bottom: 0
   font-weight: bold
 
+// !Friends moment
+
+.moment-friend-container
+  overflow: hidden
+  clear: both
+
+.moment-friend-box
+  width: 50%
+  text-align: center
+  float: left
+  margin-bottom: 30px
+
+.moment-friend-avatar
+  +border-radius(128px)
+  position: relative
+  z-index: 1
+
+.moment-friend-name
+  display: block
+  background-color: #EEEDEB
+  padding: 5px 0 7px
+  margin: -5px auto 0
+  width: 128px
+  +border-radius(4px)
+  position: relative
+  z-index: 2
+  line-height: 1.2em
+
+.moment-friend-seemore
+  display: block
+  text-align: center
 
 // !------------------------ Detail page -------------------------
 
